# ob-project-deploy-testing

./: README.md  obproject.toml  pyproject.toml
.github/workflows/: deploy.yml
flows/hello/: flow.py
src/mymodule/: __init__.py  main.py
